# warehouse_manage_face

./: CMakeLists.txt
src/: CMakeLists.txt  Config.h  FaceRecognize.cpp  FaceRecognize.h  Log.cpp  Log.h  Output.cpp  Output.h  RedisInput.cpp  RedisInput.h  main.cpp  test.h
src/DataSet/: LBPHFaceRecognizer.yml  now.yml
src/config/: output.json
src/yml/: 123.yml  faceData.yml  now.yml
